traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: not found: value getMondeLargeur
    case (getMondeLargeur(),getMondeHauteur()) => ecritMessage(cpt)
          ^TraversalByColumn:3: error: not found: value getMondeHauteur
    case (getMondeLargeur(),getMondeHauteur()) => ecritMessage(cpt)
                            ^TraversalByColumn:4: error: not found: value getMondeHauteur
    case (_,getMondeHauteur()) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX()+1,0)
            ^