traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt : Int = 0 
  (getX(),getY()) match {
    case (getMondeLargeur(),getMondeHauteur()) => ecritMessage(cpt)
    case (_,getMondeHauteur()) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX()+1,0)
    case (_,_)=> ecritMessage(cpt); cpt=cpt+1; setPos(getX(),getY()+1)
  }
}